--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -18,13 +18,12 @@
 @luccaIcons_circular-padding: 0.5em;
 
 @luccaIcons_icons:
-	"pin" "\e000",
-	"plus" "\e001",
-	"analytics" "\e002",
-	"chevron east" "\e003",
-	"chevron north" "\e004",
-	"chevron south" "\e005",
-	"chevron west" "\e006",
+	"breakfast" "\e000",
+	"gallery" "\e001",
+	"unlock" "\e003",
+	"north chevron" "\e004",
+	"south chevron" "\e005",
+	"west chevron" "\e006",
 	"attachment" "\e007",
 	"blocks" "\e008",
 	"branch" "\e009",
@@ -51,8 +50,8 @@
 	"forbidden" "\e01e",
 	"minus" "\e01f",
 	"move" "\e020",
-	"move horizontal" "\e021",
-	"move vertical" "\e022",
+	"move horizontally" "\e021",
+	"move vertically" "\e022",
 	"notification" "\e023",
 	"outside" "\e024",
 	"camera" "\e025",
@@ -62,49 +61,57 @@
 	"drag" "\e029",
 	"search" "\e02a",
 	"send" "\e02b",
-	"to user" "\e02c",
+	"send to user" "\e02c",
 	"settings" "\e02d",
 	"comment" "\e02e",
 	"timer" "\e02f",
 	"trash" "\e030",
-	"unlock" "\e031",
+	"plus" "\e031",
 	"upload" "\e032",
 	"user" "\e033",
 	"warning" "\e034",
-	"bank card" "\e035",
-	"bookmark" "\e036",
-	"coins" "\e037",
-	"milestone" "\e038",
-	"quantity" "\e039",
-	"luggage" "\e03a",
-	"train" "\e03b",
-	"tools" "\e03c",
-	"toll dollar" "\e03d",
-	"toll euro" "\e03e",
-	"taxi" "\e03f",
-	"clean car" "\e040",
-	"car" "\e041",
-	"postage" "\e042",
-	"iron" "\e043",
-	"plane" "\e044",
-	"piggy bank" "\e045",
-	"phone" "\e046",
-	"parking" "\e047",
-	"computer mouse" "\e048",
-	"subway" "\e049",
-	"meal" "\e04a",
-	"lunch" "\e04b",
-	"mileage" "\e04c",
-	"hotel" "\e04d",
-	"gasoline" "\e04e",
-	"euro" "\e04f",
-	"drink" "\e050",
-	"diner" "\e051",
-	"dollar" "\e052",
-	"computer" "\e053",
-	"bus" "\e054",
-	"breakfast" "\e055",
-	"arrow west" "\e056",
-	"arrow east" "\e057",
-	"arrow north" "\e058",
-	"arrow south" "\e059";
+	"bookmark" "\e035",
+	"milestone" "\e036",
+	"quantity" "\e037",
+	"luggage" "\e038",
+	"train" "\e039",
+	"tools" "\e03a",
+	"dollar toll" "\e03b",
+	"euro toll" "\e03c",
+	"taxi" "\e03d",
+	"clean car" "\e03e",
+	"car" "\e03f",
+	"postage" "\e040",
+	"iron" "\e041",
+	"plane" "\e042",
+	"piggy bank" "\e043",
+	"phone" "\e044",
+	"parking" "\e045",
+	"computer mouse" "\e046",
+	"subway" "\e047",
+	"meal" "\e048",
+	"lunch" "\e049",
+	"mileage" "\e04a",
+	"hotel" "\e04b",
+	"gasoline" "\e04c",
+	"euro" "\e04d",
+	"drink" "\e04e",
+	"diner" "\e04f",
+	"dollar" "\e050",
+	"computer" "\e051",
+	"bus" "\e052",
+	"west arrow" "\e053",
+	"east arrow" "\e054",
+	"north arrow" "\e055",
+	"south arrow" "\e056",
+	"pin" "\e057",
+	"analytics" "\e058",
+	"chevron east" "\e059",
+	"location" "\e05a",
+	"tiles" "\e05d",
+	"truck" "\e05e",
+	"banking card" "\e05f",
+	"database" "\e060",
+	"journey" "\e002",
+	"pricetag" "\e05b",
+	"payment" "\e05c";
