LuccaIcons [UPD] Added "analytical allocation" icon

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -114,4 +114,5 @@
 	"database" "\e060",
 	"journey" "\e002",
 	"pricetag" "\e05b",
-	"payment" "\e05c";
+	"payment" "\e05c",
+	"analytical allocation": "\e061";
