--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -109,5 +109,6 @@ $luccaIcons_icons: (
 	"database": "\e060",
 	"journey": "\e002",
 	"pricetag": "\e05b",
-	"payment": "\e05c"
+	"payment": "\e05c",
+	"analytical allocation": "\e061"
 );
