LuccaIcons [FIX] Fixes transpilation fail

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -115,4 +115,4 @@
 	"journey" "\e002",
 	"pricetag" "\e05b",
 	"payment" "\e05c",
-	"analytical allocation": "\e061";
+	"analytical allocation" "\e061";
