LuccaIcons [ADD] Added new icons: "drag2" & "jumping cc"

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -110,9 +110,11 @@
 	"location" "\e05a",
 	"tiles" "\e05d",
 	"truck" "\e05e",
-	"banking card" "\e05f",
+	"bank card" "\e05f",
 	"database" "\e060",
 	"journey" "\e002",
 	"pricetag" "\e05b",
 	"payment" "\e05c",
-	"analytical allocation" "\e061";
+	"analytical allocation" "\e061",
+	"jumping cc" "\e063",
+	"drag2" "\e062";
