--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -8,6 +8,7 @@
 
 // Class to be added to the icon elements
 @luccaIcons_icon-class: lui.icon;
+@luccaIcons_attribute-name: lui-icon;
 
 // Mixin icons default margin
 @luccaIcons_factory-margin: 0.5em;
