--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -21,10 +21,20 @@
 @luccaIcons_icons:
 	"breakfast" "\e000",
 	"gallery" "\e001",
+
+	"lock" "\e01d",
 	"unlock" "\e003",
+
 	"north chevron" "\e004",
 	"south chevron" "\e005",
 	"west chevron" "\e006",
+	"east chevron" "\e059",
+
+	"west arrow" "\e053",
+	"east arrow" "\e054",
+	"north arrow" "\e055",
+	"south arrow" "\e056",
+
 	"attachment" "\e007",
 	"blocks" "\e008",
 	"branch" "\e009",
@@ -44,32 +54,35 @@
 	"files" "\e017",
 	"filter" "\e018",
 	"email" "\e019",
+
+	"user" "\e033",
 	"add user" "\e01a",
+	"remove user" "\e028",
+	"to user" "\e02c",
+
 	"help" "\e01b",
 	"list" "\e01c",
-	"lock" "\e01d",
 	"forbidden" "\e01e",
 	"minus" "\e01f",
+
 	"move" "\e020",
 	"move horizontally" "\e021",
 	"move vertically" "\e022",
+
 	"notification" "\e023",
 	"outside" "\e024",
 	"camera" "\e025",
 	"printer" "\e026",
 	"refresh" "\e027",
-	"remove user" "\e028",
 	"drag" "\e029",
 	"search" "\e02a",
 	"send" "\e02b",
-	"send to user" "\e02c",
 	"settings" "\e02d",
 	"comment" "\e02e",
 	"timer" "\e02f",
 	"trash" "\e030",
 	"plus" "\e031",
 	"upload" "\e032",
-	"user" "\e033",
 	"warning" "\e034",
 	"bookmark" "\e035",
 	"milestone" "\e036",
@@ -101,13 +114,9 @@
 	"dollar" "\e050",
 	"computer" "\e051",
 	"bus" "\e052",
-	"west arrow" "\e053",
-	"east arrow" "\e054",
-	"north arrow" "\e055",
-	"south arrow" "\e056",
+
 	"pin" "\e057",
 	"analytics" "\e058",
-	"chevron east" "\e059",
 	"location" "\e05a",
 	"tiles" "\e05d",
 	"truck" "\e05e",
