fonts [enh] by default go fetch the font at cdn.lucca.fr

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -1,7 +1,7 @@
 
 // Name and path of font files
 @luccaIcons_font-name: 'lucca-icons';
-@luccaIcons_font-path: '../../font';
+@luccaIcons_font-path: '//cdn.lucca.fr/lucca-icons/fonts';
 
 // Default font sizing
 @luccaIcons_font-size: 1em;
