--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -126,5 +126,6 @@
 	"pricetag" "\e05b",
 	"payment" "\e05c",
 	"analytical allocation" "\e061",
+	"tree list" "\e061",
 	"jumping cc" "\e063",
 	"drag2" "\e062";
