--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -116,6 +116,7 @@ $luccaIcons_icons: (
 	"pricetag": "\e05b",
 	"payment": "\e05c",
 	"analytical allocation": "\e061",
+	"tree list": "\e061",
 	"jumping cc": "\e063",
 	"drag2": "\e062"
 );
