--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,8 @@
 
 // Name and path of font files
 $luccaIcons_font-name: 'lucca-icons' !default;
-$luccaIcons_font-path: '//cdn.lucca.fr/lucca-icons/fonts' !default;
+$luccaIcons_font-family: 'lucca-icons' !default;
+$luccaIcons_font-path: '//cdn.lucca.fr/lucca-icons/1.1.x/font' !default;
 
 // Default font sizing
 $luccaIcons_font-size: 1em !default;
