[ADD] New partial checkbox added to less

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -42,6 +42,7 @@
 	"check" "\e00b",
 	"checkbox" "\e00c",
 	"checkbox checked" "\e00d",
+	"checkbox partial" "\e064",
 	"clock" "\e00e",
 	"cross" "\e00f",
 	"calendar" "\e010",
