--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,7 @@
 
 // Name and path of font files
 $luccaIcons_font-name: 'lucca-icons' !default;
-$luccaIcons_font-family: 'lucca-icons' !default;
+$luccaIcons_font-family: $luccaIcons_font-name !default;
 $luccaIcons_font-path: '//cdn.lucca.fr/lucca-icons/font' !default;
 
 // Default font sizing
