Typo on cdn url

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,7 +2,7 @@
 // Name and path of font files
 $luccaIcons_font-name: 'lucca-icons' !default;
 $luccaIcons_font-family: $luccaIcons_font-name !default;
-$luccaIcons_font-path: '//cdn.lucca.fr/lucca-icons/font' !default;
+$luccaIcons_font-path: '//cdn.lucca.fr/lucca-icons/fonts' !default;
 
 // Default font sizing
 $luccaIcons_font-size: 1em !default;
