Icons [ADD] Adds new 'add bookmark' and 'remove bookmark' icons

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -85,7 +85,11 @@
 	"plus" "\e031",
 	"upload" "\e032",
 	"warning" "\e034",
+
 	"bookmark" "\e035",
+	"add bookmark" "\e065",
+	"remove bookmark" "\e066",
+
 	"milestone" "\e036",
 	"quantity" "\e037",
 	"luggage" "\e038",
