--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -74,7 +74,11 @@ $luccaIcons_icons: (
 	"upload": "\e032",
 	"user": "\e033",
 	"warning": "\e034",
+
 	"bookmark": "\e035",
+	"add bookmark": "\e065",
+	"remove bookmark": "\e066",
+
 	"milestone": "\e036",
 	"quantity": "\e037",
 	"luggage": "\e038",
