--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -1,4 +1,6 @@
 
+@createClasses: true;
+
 // Name and path of font files
 @luccaIcons_font-name: 'lucca-icons';
 @luccaIcons_font-path: '//cdn.lucca.fr/lucca-icons/fonts';
