--- a/src/sass/_icons.scss
+++ b/src/sass/_icons.scss
@@ -49,36 +49,39 @@
 	}
 }
 
-i#{$luccaIcons_icon-base-selector} {
-	@extend %luccaIcons_icon_base;
-	display: inline-block;
-	vertical-align: middle;
-}
 
-// Icon styles
-// ===================================
+@if ($createClasses) {
+	i#{$luccaIcons_icon-base-selector} {
+		@extend %luccaIcons_icon_base;
+		display: inline-block;
+		vertical-align: middle;
+	}
 
-// Circular
-i#{$luccaIcons_icon-base-selector}.circular {
-	width: $luccaIcons_circular-width; height: $luccaIcons_circular-height;
-	padding: $luccaIcons_circular-padding;
+	// Icon styles
+	// ===================================
 
-	border-radius: 50%;
-}
+	// Circular
+	i#{$luccaIcons_icon-base-selector}.circular {
+		width: $luccaIcons_circular-width; height: $luccaIcons_circular-height;
+		padding: $luccaIcons_circular-padding;
 
-// Flipped
-i#{$luccaIcons_icon-base-selector}.flipped,
-i#{$luccaIcons_icon-base-selector}.flipped[class*="horizontally flipped"] { transform: scale(-1, 1); }
-i#{$luccaIcons_icon-base-selector}.flipped[class*="vertically flipped"] { transform: scale(1, -1); }
+		border-radius: 50%;
+	}
 
-// Rotated
-i#{$luccaIcons_icon-base-selector}.rotated,
-i#{$luccaIcons_icon-base-selector}.rotated[class*="clockwise rotated"] { transform: rotate(90deg); }
-i#{$luccaIcons_icon-base-selector}.rotated[class*="counterclockwise rotated"] { transform: rotate(-90deg); }
+	// Flipped
+	i#{$luccaIcons_icon-base-selector}.flipped,
+	i#{$luccaIcons_icon-base-selector}.flipped[class*="horizontally flipped"] { transform: scale(-1, 1); }
+	i#{$luccaIcons_icon-base-selector}.flipped[class*="vertically flipped"] { transform: scale(1, -1); }
+
+	// Rotated
+	i#{$luccaIcons_icon-base-selector}.rotated,
+	i#{$luccaIcons_icon-base-selector}.rotated[class*="clockwise rotated"] { transform: rotate(90deg); }
+	i#{$luccaIcons_icon-base-selector}.rotated[class*="counterclockwise rotated"] { transform: rotate(-90deg); }
 
 
-// Defines icon classes
-@each $name, $char in $luccaIcons_icons {
-	$class: str-replace($name, ' ', '.');
-	#{$luccaIcons_icon-base-selector}.#{$class}[class*="#{$name}"]:before { content: $char; }
+	// Defines icon classes
+	@each $name, $char in $luccaIcons_icons {
+		$class: str-replace($name, ' ', '.');
+		#{$luccaIcons_icon-base-selector}.#{$class}[class*="#{$name}"]:before { content: $char; }
+	}
 }
