--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,5 @@
 
+$createClasses: true !default;
 // Name and path of font files
 $luccaIcons_font-name: 'lucca-icons' !default;
 $luccaIcons_font-family: $luccaIcons_font-name !default;
