[FIX] Wrongly named variable.

--- a/src/less/_icons.less
+++ b/src/less/_icons.less
@@ -17,7 +17,7 @@
  * Icons
  * --------------------------------------------------------------------------- */
 
-& when (@createClasses) {
+& when (@luccaIcons_font-create-classes) {
 	i.@{luccaIcons_icon-class},
 	[@{luccaIcons_attribute-name}] {
 		font-family: @luccaIcons_font-name;
