--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -1,5 +1,5 @@
 
-@createClasses: true;
+@luccaIcons_font-create-classes: true;
 
 // Name and path of font files
 @luccaIcons_font-name: 'lucca-icons';
